<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/businessName"
                    style="@style/businessNameStyle"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
                <ViewFlipper
                    android:id="@+id/image_flip"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal">

                </ViewFlipper>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/businessTag"
                    style="@style/businessTagStyle"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="2dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.75"
                        android:background="@drawable/ic_action_time"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/morning"
                                    style="@style/timingHeadingStyle"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/morningTime"
                                    style="@style/timingStyle"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/evening"
                                    style="@style/timingHeadingStyle"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/eveningTime"
                                    style="@style/timingStyle"/>

                            </LinearLayout>


                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/closedTime"
                            android:gravity="center"
                            android:layout_marginBottom="15dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/cyan">

                        </LinearLayout>
                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/contact_image"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.75"
                        android:background="@drawable/ic_action_phone"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        android:background="@color/cyan">
                        <TextView
                            android:id="@+id/contact"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="1dp"
                            android:text="@string/phoneNO"
                            style="@style/phoneStyle"
                            android:background="@color/white"/>


                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:id="@+id/location_image"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.75"
                        android:background="@drawable/ic_action_location"
                        />
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/address"
                        style="@style/timingStyle"/>
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>


</LinearLayout>